# mcp-registry

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  mcp.json  pyproject.toml  requirements.txt
.github/: CODEOWNERS
.github/PULL_REQUEST_TEMPLATE/: access_request.md  new_capability.md
.github/workflows/: test.yml
api/: app.py
cli/: part_cli.py  registry_cli.py
examples/: mcp_interactive.py  test_mcp.py
mcp_server/: __main__.py  app.py
migrations/: 001_init.sql  002_add_scope_to_call_logs.sql
registry/: auth.py  db.py  logger.py  models.py  parts.py
scripts/: seed.py  test_parts.csv  test_results.json
tests/: test_api.py  test_registry.py
